--- a/sass/lavamenos.scss
+++ b/sass/lavamenos.scss
@@ -41,14 +41,60 @@ body {
   justify-content: space-between;
 }
 
-/* .template-card{
-    max-width: 1200px;
-    margin: auto;
-    align-items: center;
-
-} */
-
+/* ------Sección Cotización ------- */
 .cotizacion-section{
-    margin-top: 5rem;
+    display: grid;
+    grid-template-areas: "nom nom nom nom"
+                         "cot prod prod prod"
+                         "cot prod prod prod";
+    margin: 2rem;
+    h2{
+        grid-area: nom;
+    }
+}
 
+.cotizacion-precios {
+    grid-area: cot;
+}
+
+#laundry-card {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100vw;
+    justify-content: space-evenly;
+    max-width: 1000px;
+    margin: 0 auto;
+    grid-area: prod;
+}
+
+.tarjeta {
+    width: 250px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    img{
+        width: 200px;
+        margin-top: 1rem;
+
+    }
+    .btn-agregar{
+        padding: .5rem;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        margin-top: -1rem;
+        background-color: map-get($map: $colors, $key: colorSecundario);
+        border: none;
+    }
+    h5{
+        margin-top: 1rem;
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .cotizacion-section{
+        grid-template-areas: "nom"
+                         "prod"
+                         "cot";
+    }
 }
